@@ -1,3 +1,9 @@
+2005-06-09  Christopher Faylor  <cgf@timesys.com>
+
+	* coffcode.h (sec_to_styp_flags): Remove read/write flags from noload
+	section header.  Do not add STYP_NOLOAD since it does not appear to be
+	a valid PE flag.
+
 2005-06-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR 1000
